tests/NormalTests/paczka1/small_fuzzy/14323043.err
Error in line 2: SHZqT S132 49,0
Error in line 10: MR6VGLDlMgC S332 -3,3
Error in line 9: SHZqT S667 23,8
Error in line 13: SHZqT S132 29,0
Error in line 6: MR6VGLDlMgC S132 57,7
